middle of event sync week

--- a/frontend/src/containers/Container_CSS/EventSync.css
+++ b/frontend/src/containers/Container_CSS/EventSync.css
@@ -8,15 +8,16 @@
 }
 
 
-.eventSyncCalendarContainer .timecol {
+.eventSyncCalendarContainer .syncCalendar .syncBody .timecol {
   width: 50px;
   float: left;
   position:relative;
   top: 127px;
   height: 1000px;
+  /* background-color: red; */
 }
 
-.eventSyncCalendarContainer .timecol .body .cell{
+.eventSyncCalendarContainer .syncCalendar .syncBody .timecol .body .cell{
   position: relative;
   height: 5.1em;
   /* border-bottom: 2px solid var(--border-color); */
@@ -25,11 +26,11 @@
   transition: 0.25s ease-out;
 }
 
-.eventSyncCalendarContainer .timecol .body .cell:first-child{
+.eventSyncCalendarContainer .syncCalendar .syncBody .timecol .body .cell:first-child{
   border-top: 1px solid var(--border-color);
 }
 
-.eventSyncCalendarContainer .timecol .body .cell .number {
+.eventSyncCalendarContainer .syncCalendar .syncBody .timecol .body .cell .number {
   font-size: 82.5%;
   line-height: 1;
   top: .75em;
@@ -37,20 +38,31 @@
   font-weight: 700;
 }
 
-.eventSyncCalendarContainer .calendar {
+.eventSyncCalendarContainer .syncCalendar {
   display: block;
   position: relative;
   width: 90%;
   background: var(--neutral-color);
-  border: 1px solid var(--border-color);
+  /* background-color: blue; */
+  /* border: 1px solid var(--border-color); */
 }
 
-.eventSyncCalendarContainer .calendar .header {
+.eventSyncCalendarContainer .syncCalendar .syncHeader{
+  background-color: red;
+  width: 1000px;
+  position: relative;
+  left: 50px;
+}
+
+.eventSyncCalendarContainer .syncCalendar .syncHeader .header {
+  position: relative;
   text-transform: uppercase;
-  font-weight: 700;
-  font-size: 115%;
-  padding: 1.5em 0;
-  border-bottom: 1px solid var(--border-color);
+  font-weight: 100;
+  font-size:30px;
+  padding: 0em 0;
+  /* border-bottom: 1px solid var(--border-color); */
+  /* background-color: blue; */
+  width: 150px;
 }
 
 .eventSyncCalendarContainer .col-center {
@@ -59,16 +71,21 @@
 }
 
 /* Use the one below to control the widht of the day row on top */
-.eventSyncCalendarContainer .calendar .days {
+.eventSyncCalendarContainer .syncCalendar .syncHeader .days {
   text-transform: uppercase;
   font-weight: 400;
   color: ;
-  font-size: 100%;
-  padding: .75em 0;
+  font-size: 13px;
+  /* padding: .75em 0; */
+  height: 40px;
   border-bottom: 1px solid var(--border-color);
+  /* border: 1px solid; */
+  width: 1000px;
+  /* background-color: blue; */
 }
 
-.eventSyncCalendarContainer .calendar .body .disabled{
+
+.eventSyncCalendarContainer .syncCalendar .syncBody .syncGrid .body .disabled{
   color: var(--text-color-light);
   color: black;
   pointer-events: none;
@@ -78,46 +95,60 @@
 .syncCol {
   flex-grow: 1;
   flex-basis: 0;
-  max-width: 100%
+  max-width: 100%;
 }
 
-.eventSyncCalendarContainer .calendar .body .hourcell{
-  position: relative;
-  height: 5em;
-  border-right: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
-  overflow: hidden;
-  cursor: pointer;
-  background: var(--neutral-color);
-  transition: 0.25s ease-out;
-  /* background-color: lightskyblue; */
+.eventSyncCalendarContainer .syncCalendar .syncBody {
+  background-color: red;
+  display: flex;
+  overflow: auto;
+  height: 780px;
+  border-top: 2px solid;
+  border-color: darkgrey;
+  width: 1070px;
 }
 
-.eventSyncCalendarContainer .calendar .body .nonhourcell{
+.eventSyncCalendarContainer .syncCalendar .syncBody .syncGrid .body{
+  /* background-color: red; */
+  width: 1000px;
+}
+
+
+.eventSyncCalendarContainer .syncCalendar .syncBody .syncGrid .body .hourcell{
   position: relative;
-  height: 5em;
+  height: 60px;
   border-right: 1px solid var(--border-color);
   border-bottom: 1px solid var(--border-color);
-  overflow: hidden;
+  /* overflow: hidden; */
   cursor: pointer;
   background: var(--neutral-color);
-  transition: 0.25s ease-out;
   background-color: lightskyblue;
 }
 
-.eventSyncCalendarContainer .calendar .body .hourcell .monthlist{
+.eventSyncCalendarContainer .syncCalendar .syncBody .syncGrid .body .nonhourcell{
+  position: relative;
+  height: 60px;
+  border-right: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
+  /* overflow: hidden; */
+  cursor: pointer;
+  background: var(--neutral-color);
+  background-color: lightskyblue;
+}
+
+.eventSyncCalendarContainer .syncCalendar .syncBody .syncGrd .body .hourcell .monthlist{
   list-style-type:none;
   width: 150%;
   position: relative;
   right: 50px;
 }
 
-.eventSyncCalendarContainer .calendar .body .hourcell .monthlist .monthListItem {
+.eventSyncCalendarContainer .syncCalendar .body .hourcell .monthlist .monthListItem {
   background-color: lightblue;
   text-align: center;
 }
 
-.eventSyncCalendarContainer .calendar .body .hourcell .monthlist .monthListItem .eventSyncItem{
+.eventSyncCalendarContainer .syncCalendar .body .hourcell .monthlist .monthListItem .eventSyncItem{
   font-size: 7pt;
   color: white;
   left: 10px;
