--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -4,16 +4,19 @@
   padding: 0 40px;
   cursor: pointer;
   transition: color 0.3s;
+
 }
 
 #components-layout-demo-custom-trigger .trigger:hover {
   color: #1890ff;
+
 }
 
 #components-layout-demo-custom-trigger .logo {
   height: 32px;
   background: rgba(255, 255, 255, 0.2);
   margin: 16px;
+  width:500;
 }
 
 
