--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -1,12 +1,4 @@
-.newsfeedTop {
-  background-color: white;
 
-  width: 1000px;
-  margin-top: 1px;
-
-  /* overflow:auto; */
-  /* background-color: red; */
-}
 .newsfeed {
 
 
@@ -22,8 +14,13 @@
   width: 200px;
   height: 150px;
 }
-#example1 {
-  border: 2px solid red;
-  padding: 10px;
+
+
+.createEventCSS{
   border-radius: 25px;
+  backgroundColor: 'white';
+  height: '500px';
+  width: '300px';
+  position: 'relative';
+  right:'100px';
 }
