--- a/frontend/src/containers/Container_CSS/NewCalendar.css
+++ b/frontend/src/containers/Container_CSS/NewCalendar.css
@@ -98,10 +98,10 @@ main {
 /* Container that holds Calendar */
 .calendarContainer{
   position: relative;
-  right: 150px;
+  right: 135px;
   width: 1395px;
   height: 920px;
-  bottom: 7px;
+  bottom: 10px;
   /* background-color: yellow; */
   display: flex;
 }
@@ -354,7 +354,7 @@ main {
 /* Calendar */
 /* this will help control the width of the calendar */
 .flex-container .calendar{
-  width: 1520px;
+  width: 1455px;
   /* background-color: blue; */
 }
 
@@ -363,6 +363,7 @@ main {
   display: block;
   position: relative;
   width: 100%;
+  /* background-color: red; */
   background: var(--neutral-color);
   border: 1px solid var(--border-color);
 }
@@ -558,8 +559,8 @@ main {
 .calendarContainer .mainCalContainer{
   width: 1600px;
   position: relative;
-  right: 55px;
-  top: 0px;
+  right: 5px;
+  top: -20px;
   padding: 0;
   /* padding-left: 25px; */
   /* background-color: orange; */
@@ -620,9 +621,86 @@ main {
   transform: perspective(5px) rotateX(2deg);
   transform-origin: bottom;
 }
+.miniCalContainer {
+  position:relative;
+  left: 22px;
+  /* background-color: red; */
+}
+
 .miniCalContainer .miniCalendar {
   /* background-color: red; */
   /* height: 100px; */
+  position: relative;
+  top: 60px;
+}
+
+.miniCalContainer .addEventButton {
+  border: none;
+  color: deepskyblue;
+  /* background-image: linear-gradient(to bottom right, #43cea2 , #185a9d); */
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  position: relative;
+  left: 35px;
+  width: 150px;
+  top: 40px;
+  height: 50px;
+  font-size: 20px;
+}
+
+.miniCalContainer .timeLayerCon{
+  /* background-color: red; */
+  width: 250px;
+  position: relative;
+  top: 90px;
+  right: 0px;
+}
+
+.miniCalContainer .timeLayerCon .yearButton {
+  background-color: #89ABE3FF;
+  border: none;
+  width: 75px;
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+
+}
+
+.miniCalContainer .timeLayerCon .monthButton {
+  background-color: #FFD662FF;
+  border: none;
+  width: 75px;
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+
+}
+
+.miniCalContainer .timeLayerCon .weekButton {
+  background-color: #4B878BFF;
+  border: none;
+  width: 75px;
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+
+}
+
+.miniCalContainer .miniEventSyncButton {
+  /* background-color: red; */
+  position: relative;
+  top: 70px;
+  width: 220px;
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+
+}
+
+.miniCalContainer .addEventButton:hover {
+  border: none;
+  color: white;
+  background-image: linear-gradient(to bottom right, #43cea2 , #185a9d);
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  position: relative;
+  left: 35px;
+  width: 150px;
+  top: 40px;
+  height: 50px;
+  font-size: 20px;
+  transform: scale(1.05) perspective(1px)
+
 }
 
 .miniCalContainer .miniCalendar .header{
@@ -870,7 +948,7 @@ main {
 to make it adjustable */
 .calendar .body .row {
   display: grid;
-  grid-template-columns: repeat(7, 215px);
+  grid-template-columns: repeat(7, 207px);
   grid-template-rows: repeat(6, 25px);
   grid-auto-flow: dense;
   grid-row-gap: 2px;
