--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -1,3 +1,106 @@
+/* temporary for test to see card look */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+}
+
+/* Add rounded corners to the top left and the top right corner of the image */
+img {
+  border-radius: 5px 5px 0 0;
+}
+
+
+.fbh5 {
+  color: rgb(20, 24, 35);
+  direction: ltr;
+  display: block;
+
+  font-size: 14px;
+  font-weight: normal;
+  height: 19px;
+  line-height: 19.3199996948242px;
+  margin-bottom: 2px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  padding-bottom: 0px;
+  padding-left: 0px;
+  padding-right: 22px;
+  padding-top: 0px;
+  text-align: left;
+  width: 86px;
+}
+.fb-group-date {
+  color: rgb(145, 151, 163);
+  direction: ltr;
+  display: inline;
+
+  font-size: 12px;
+  font-weight: normal;
+  height: auto;
+  line-height: 16.0799999237061px;
+  text-align: left;
+  width: auto;
+}
+
+
+.usertext {
+  color: rgb(20, 24, 35);
+
+  font-size: 15px;
+  font-weight: normal;
+  height: auto;
+  line-height: 19.3199996948242px;
+  margin-bottom: 0px;
+  margin-left: 10px;
+  margin-right: 0px;
+  margin-top: 50px;
+  text-align: left;
+  width: auto;
+  word-wrap: break-word;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .newsfeed {
 
