--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -1,8 +1,10 @@
 /* temporary for test to see card look */
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
+  min-height:20px;
+  margin-bottom: 100px;
 }
 
 /* Add rounded corners to the top left and the top right corner of the image */
