--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -2,8 +2,9 @@
 .card {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
+
   border-radius: 5px; /* 5px rounded corners */
-  min-height:20px;
+
   margin-bottom: 100px;
 }
 
@@ -37,15 +38,23 @@ img {
 }
 .fb-group-date {
   color: rgb(145, 151, 163);
-  direction: ltr;
-  display: inline;
+
 
   font-size: 12px;
   font-weight: normal;
   height: auto;
   line-height: 16.0799999237061px;
-  text-align: left;
+
   width: auto;
+
+}
+
+
+.avatarPic {
+
+    font-size: 12;
+
+
 }
 
 
