--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -1,10 +1,11 @@
 /* temporary for test to see card look */
 .card {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
+
   transition: 0.3s;
-
-  border-radius: 5px; /* 5px rounded corners */
-
+  height:200;
+  border-radius: 0px; /* 5px rounded corners */
+  min-height: 100px;
   margin-bottom: 100px;
 }
 
@@ -14,24 +15,17 @@ img {
 }
 
 
-.fbh5 {
+.personName {
   color: rgb(20, 24, 35);
-  direction: ltr;
-  display: block;
-
   font-size: 14px;
   font-weight: normal;
   height: 19px;
   line-height: 19.3199996948242px;
-  margin-bottom: 2px;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-top: 0px;
+  margin-left: 15px;
   overflow-x: hidden;
   overflow-y: hidden;
-  padding-bottom: 0px;
-  padding-left: 0px;
-  padding-right: 22px;
+
+
   padding-top: 0px;
   text-align: left;
   width: 86px;
@@ -39,12 +33,12 @@ img {
 .fb-group-date {
   color: rgb(145, 151, 163);
 
-
-  font-size: 12px;
+  font-size: 14px;
   font-weight: normal;
   height: auto;
   line-height: 16.0799999237061px;
-
+  margin-left: 55px;
+  margin-top:10px;
   width: auto;
 
 }
