--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -39,104 +39,61 @@
 }
 
 
-
-.mock-outer {
-
-  background-color: rgb(255, 255, 255);
-
-
-  border-image-outset: 0px;
-  border-image-repeat: stretch;
-  border-image-slice: 100%;
-  border-image-source: none;
-
-
-  /* makes the border grey instead of black */
-
-  border-top-color: rgb(229, 230, 233);
-  border-bottom-color: rgb(208, 209, 213);
-  border-right-color: rgb(223, 224, 228);
-  border-left-color: rgb(223, 224, 228);
-
-  /* these style:solid are all what makes the border outlined */
-  border-top-style: solid;
-  border-left-style: solid;
-  border-bottom-style: solid;
-  border-right-style: solid;
-
-  /* stops shadow effect grey edges on sides */
-  border-image-width: 1;
-  border-left-width: 1px;
-  border-bottom-width: 1px;
-  border-right-width: 1px;
-  border-top-width: 1px;
-
-
-
-
-  font-size: 12px;
-
-
-  /* resize based off of auto height */
-  height: auto;
-
-
-
-  /* how everything is formatted in the post */
-  margin-bottom: 50px;
-  padding-bottom: 12px;
-  padding-left: 32px;
-  padding-right: 12px;
-  padding-top: 12px;
-  text-align: left;
-  width: 700px;
-  word-wrap: break-word;
-  border-radius: 25px;
-
-
-  box-shadow: 1px 1px 1px -1px gray;
-
-  padding-bottom: 30;
-
-}
-
 .maxHeightPost{
   max-height: 630px;
 }
 
-.fbh5 {
-  color: rgb(20, 24, 35);
-  direction: ltr;
-  display: block;
+/* temporary for test to see card look */
+.card {
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
 
+  transition: 0.3s;
+  height:200;
+  border-radius: 0px; /* 5px rounded corners */
+  min-height: 100px;
+  margin-bottom: 100px;
+}
+
+/* Add rounded corners to the top left and the top right corner of the image */
+img {
+  border-radius: 5px 5px 0 0;
+}
+
+
+.personName {
+  color: rgb(20, 24, 35);
   font-size: 14px;
   font-weight: normal;
   height: 19px;
   line-height: 19.3199996948242px;
-  margin-bottom: 2px;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-top: 0px;
+  margin-left: 15px;
   overflow-x: hidden;
   overflow-y: hidden;
-  padding-bottom: 0px;
-  padding-left: 0px;
-  padding-right: 22px;
+
+
   padding-top: 0px;
   text-align: left;
   width: 86px;
 }
 .fb-group-date {
   color: rgb(145, 151, 163);
-  direction: ltr;
-  display: inline;
 
-  font-size: 12px;
+  font-size: 14px;
   font-weight: normal;
   height: auto;
   line-height: 16.0799999237061px;
-  text-align: left;
+  margin-left: 55px;
+  margin-top:10px;
   width: auto;
+
+}
+
+
+.avatarPic {
+
+    font-size: 12;
+
+
 }
 
 
@@ -157,37 +114,6 @@
 
 }
 
-.fb-group-picrow img {
-  border-bottom-color: rgb(59, 89, 152);
-  border-bottom-style: none;
-  border-bottom-width: 0px;
-  border-image-outset: 0px;
-  border-image-repeat: stretch;
-  border-image-slice: 100%;
-  border-image-source: none;
-  border-image-width: 1;
-  border-left-color: rgb(59, 89, 152);
-  border-left-style: none;
-  border-left-width: 0px;
-  border-right-color: rgb(59, 89, 152);
-  border-right-style: none;
-  border-right-width: 0px;
-  border-top-color: rgb(59, 89, 152);
-  border-top-style: none;
-  border-top-width: 0px;
-  color: rgb(59, 89, 152);
-  cursor: pointer;
-  direction: ltr;
-  display: block;
-
-  font-size: 12px;
-  height: 40px;
-  line-height: 16.0799999237061px;
-  text-align: left;
-  width: 40px;
-  float: left;
-  padding-right: 8px
-}
 
 .name-date-space{
   margin-bottom: 65px;
