--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -1,8 +1,22 @@
 /* http://jsfiddle.net/zbt5L1wp/4/ */
 
+circle,
+rect {
+  stroke-width: 2;
+  stroke: rgba(0, 0, 0, 0.1);
+  fill: none;
+}
 
-
-
+header {
+  background: #395590;
+  color: #FFF;
+  height: 300px;
+  margin: 0 auto;
+  padding: 0;
+  overflow: hidden;
+  position: relative;
+  width: initial;
+}
 
 .blueColor{
   background-color:blue-6;
@@ -30,6 +44,9 @@
 .card {
     display: grid;
     grid-template-rows: max-content 200px 1fr;
+    margin: 0 auto;
+    padding: 0 30px 10px;
+    width: initial;
 }
 
 .card img {
@@ -45,19 +62,16 @@
 
 /* temporary for test to see card look */
 .card {
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 2px 2px 0 rgba(0,0,4,4.2);
 
   transition: 0.3s;
   height:200;
   border-radius: 0px; /* 5px rounded corners */
   min-height: 100px;
   margin-bottom: 100px;
+
 }
 
-/* Add rounded corners to the top left and the top right corner of the image */
-img {
-  border-radius: 5px 5px 0 0;
-}
 
 
 .personName {
@@ -83,7 +97,7 @@ img {
   height: auto;
   line-height: 16.0799999237061px;
   margin-left: 55px;
-  margin-top:10px;
+
   width: auto;
 
 }
