--- a/frontend/src/containers/Container_CSS/Notifications.css
+++ b/frontend/src/containers/Container_CSS/Notifications.css
@@ -129,7 +129,7 @@
 
 .notificationListContainer:hover{
 
-  background-color: #F5F5F5	;
+  background-color: #F7F9FB	;
 }
 
 .notificationListContainer .notificationIcon {
