--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -1,21 +1,17 @@
 
-/* temporary for test to see card look */
-.card {
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
-
-  transition: 0.3s;
-  height:200;
-  border-radius: 0px; /* 5px rounded corners */
-  min-height: 100px;
-  margin-bottom: 100px;
-}
 
 /* Add rounded corners to the top left and the top right corner of the image */
 img {
   border-radius: 5px 5px 0 0;
 }
 
-
+.avatar {
+  vertical-align: middle;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 3px solid #FFFFFF;
+}
 .personName {
   color: rgb(20, 24, 35);
   font-size: 14px;
