--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -1,5 +1,15 @@
 /* http://jsfiddle.net/zbt5L1wp/4/ */
 
+/* temporary for test to see card look */
+.card {
+
+
+  background: #FFFFFF;
+  border-radius: 4px;
+  min-height: 50px;
+
+
+}
 
 
 
@@ -15,11 +25,12 @@
 }
 
 .testAvatar {
-    width: 120px;
-    height: 120px;
+    width: 30px;
+    height: 30px;
     border-radius: 10px;
-    border: solid 3px #fff;
+
     box-shadow: 0 0 3px 2px #ccc;
+    margin-left: 10px;
 }
 
 
