--- a/frontend/src/containers/Container_CSS/NewCalendar.css
+++ b/frontend/src/containers/Container_CSS/NewCalendar.css
@@ -145,7 +145,8 @@ main {
   height: 780px;
   border-top: 2px solid;
   border-color: darkgrey;
-  width: 1465px;
+  width: 1370px;
+  /* background-color: red; */
 }
 
 .row {
@@ -180,6 +181,7 @@ main {
 .col {
   flex-grow: 1;
   flex-basis: 0;
+  /* width: 40px; */
   max-width: 100%;
   /* background-color: red; */
 }
@@ -206,11 +208,15 @@ main {
 .col-start {
   justify-content: flex-start;
   text-align: left;
+  /* width: 20px; */
+  /* background-color: red; */
 }
 
 .col-center {
   justify-content: center;
   text-align: center;
+  /* background-color: red; */
+  /* width: 40px; */
 }
 
 .col-end {
@@ -409,17 +415,28 @@ main {
   padding: 1em 0;
   /* border-bottom: 1px solid var(--border-color); */
   /* background-color: blue; */
-  width: 400px;
+  width: 580px;
+}
+
+.weekCalendar .dayHeader {
+  font-weight: 400;
+  font-size: 17px;
+  padding: 1em 0;
+  /* border-bottom: 1px solid var(--border-color); */
+  /* background-color: blue; */
+  width: 850px;
 }
 
 .calendar .header .icon {
   cursor: pointer;
   transition: .15s ease-out;
+  /* background-color: red; */
 }
 
 .weekCalendar .header .icon{
   cursor: pointer;
   transition: .15s ease-out;
+  /* background-color: red; */
 }
 
 .calendar .header .icon:hover {
@@ -494,10 +511,10 @@ main {
   font-size: 100%;
   height: 44px;
   /* padding: .75em 0; */
-  border-top: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
-  width: 1470px;
+  /* border-top: 1px solid var(--border-color); */
+  /* border-bottom: 1px solid var(--border-color); */
+  /* border-right: 1px solid var(--border-color); */
+  width: 1310px;
   /* background-color: red; */
 }
 
@@ -703,7 +720,10 @@ main {
 .miniCalContainer .timeLayerCon .weekButton {
   background-color: #4B878BFF;
   border: none;
-  width: 75px;
+  position: relative;
+  top: 20px;
+  width: 150px;
+  height: 40px;
   box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 
 }
@@ -1222,6 +1242,7 @@ to make it adjustable */
 .calendar .scrollBody .backWeekBody .col {
   flex-grow: 0;
   flex-basis: calc(100%/7);
+  /* background-color: red; */
   /* flex-direction: column; */
   /* flex-wrap: wrap; */
   /* flex-direction: column; */
