--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -9,8 +9,22 @@
   min-height: 50px;
 
 
+  border-radius: 0px; /* 5px rounded corners */
+
 }
 
+
+
+
+
+.seeMore{
+  marginTop:10px;
+  font-size: 12px;
+  line-height: 11px;
+  text-transform: uppercase;
+
+  color: #0275B1;
+}
 
 
 .postPic{
@@ -33,7 +47,15 @@
     margin-left: 10px;
 }
 
+.grayout {
+    opacity: 0.6; /* Real browsers */
+    filter: alpha(opacity = 60); /* MSIE */
+}
 
+
+.whiteSpacePost{
+  white-space: pre-wrap
+}
 
 
 header {
@@ -90,16 +112,6 @@ header {
 }
 
 /* temporary for test to see card look */
-.card {
-  box-shadow: 0 2px 2px 0 rgba(0,0,4,4.2);
-
-  transition: 0.3s;
-  height:200;
-  border-radius: 0px; /* 5px rounded corners */
-  min-height: 100px;
-  margin-bottom: 100px;
-
-}
 
 
 
