--- a/frontend/src/containers/Container_CSS/NewCalendar.css
+++ b/frontend/src/containers/Container_CSS/NewCalendar.css
@@ -403,9 +403,9 @@ main {
 }
 
 .calendar .header {
-  text-transform: uppercase;
-  font-weight: 100;
-  font-size: 100%;
+  /* text-transform: uppercase; */
+  font-weight: 400;
+  font-size: 15px;
   padding: 1.5em 0;
   /* border-bottom: 1px solid var(--border-color); */
   /* background-color: blue; */
