--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -5,11 +5,9 @@
 
 
   background: #FFFFFF;
-  border-radius: 4px;
+
   min-height: 70px;
-
-
-
+  border-style: ridge;
 }
 
 
@@ -20,7 +18,7 @@
   margin-top: 50;
   width: 100px;
   height: 100px;
-       background-color: #0069FF;
+       background-color: #bfbfbf;
        border-radius: 0 100px 0 0;
             -moz-border-radius: 0 100px 0 0;
             -webkit-border-radius: 0 100px 0 0;
