--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -223,6 +223,12 @@ font-style: normal; font-variant: normal; font-weight: 400; line-height: 29px;
  }
 
 
+.fontTest .comment-list{
+  /* background-color: red; */
+  overflow:auto;
+  height: 300px;
+}
+
 
  @font-face {
  font-family: 'Segoe UI Regular';
