--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -27,6 +27,25 @@ img {
 }
 
 
+.share{
+  display:block;
+  width:60px;
+  height:60px;
+  background:#ff9100;
+  top:300px;
+  left:50%;
+  z-index:999;
+  text-align:center;
+  overflow:hidden;
+  line-height:65px;
+  font-size:1.5em;
+  color:#fff;
+  -moz-box-shadow: 0px 3px 9px rgba(0,0,0,.5);
+-webkit-box-shadow: 0px 3px 9px rgba(0,0,0,.5);
+box-shadow: 0px 3px 9px rgba(0,0,0,.5);
+  border-radius:50px;
+
+}
 
 
 .avatar {
