--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -1,6 +1,26 @@
 /* http://jsfiddle.net/zbt5L1wp/4/ */
 
 /* temporary for test to see card look */
+
+
+
+*{
+  margin:0;
+  padding:0;
+  -webkit-box-sizing:border-box;
+  box-sizing:border-box;
+}
+
+body{
+  background:#311b92;
+  position:relative;
+}
+
+
+
+
+
+
 .card {
 
 
@@ -8,6 +28,9 @@
 
   min-height: 70px;
   border-style: ridge;
+
+box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+background-color: #ffffff;
 }
 
 
