--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -4,18 +4,17 @@
 
 
 
-*{
-  margin:0;
-  padding:0;
-  -webkit-box-sizing:border-box;
-  box-sizing:border-box;
-}
 
 body{
   background:#311b92;
   position:relative;
 }
 
+.cardborder{
+  border-style: ridge;
+
+box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+}
 
 
 
@@ -148,12 +147,6 @@ header {
 
 
 
-.cardborder {
-  border-radius: 25px;
-  background: #73AD21;
-  box-shadow: 5px 10px 18px #888888;
-
-  }
 
 
 
