--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -11,7 +11,7 @@ img {
 
   width:200px;
   height:50px;
-  border-style: ridge;
+  
 
 box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
@@ -187,7 +187,9 @@ color: #203758;
 
 
 .suggestFriendsCSS {
-  border-radius: 25px;
+
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+  background-color: #ffffff;
   padding: 20px;
   width: 200px;
   height: 150px;
