--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -11,7 +11,7 @@ body{
 }
 
 .cardborder{
-  border-style: ridge;
+
 
 box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 }
@@ -26,9 +26,9 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
   background: #FFFFFF;
 
   min-height: 70px;
-  border-style: ridge;
 
-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+
+box-shadow: 0 2px 3px rgba(0, 0, 0, 0.06);
 background-color: #ffffff;
 }
 
@@ -125,6 +125,19 @@ background: linear-gradient(to bottom, #2193b0, #6dd5ed); /* W3C, IE 10+/ Edge, 
 
 .whiteSpacePost{
   white-space: pre-wrap
+}
+
+
+.outerSeeMore {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+.innerSeeMore {
+  display: inline-block;
 }
 
 
