--- a/frontend/src/components/UserProfiles/UserProfileCard.css
+++ b/frontend/src/components/UserProfiles/UserProfileCard.css
@@ -56,7 +56,7 @@
   height: 470px;
   border-radius: 25px;
   display: grid;
-  grid-template-rows: auto 100px;
+  /* grid-template-rows: auto 100px; */
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
   position: relative;
   overflow: hidden;
@@ -80,27 +80,56 @@
   transition: 0.5s;
 }
 
-
 .name {
+  /* position: absolute; */
+
+  bottom: 20%;
+  left: 5%;
+  /* background-color: red; */
+  color: #ffffff;
   font-weight: bold;
-  font-size: 26px;
+  font-size: 40px;
   line-height: 26px;
   z-index: 1;
 }
 
+.top{
+  position: absolute;
+  color: white;
+  font-size: 30px;
+  /* background-color: red; */
+  left: 88%;
+}
+
 .bottom {
+  position: absolute;
+  bottom: -20%;
   display: grid;
-  justify-content: center;
+  grid-template-rows: auto 30px;
+  justify-content: left;
   align-content: center;
-  text-align: center;
+  text-align:left;
+  padding-left: 10px;
   width: 300px;
-  position: relative;
   color: #363636;
 }
 
 .designation{
-  margin-top: 5px;
+  /* position: absolute; */
+  color: #ffffff;
+  margin-top: 15px;
+  margin-left: 5px;
   font-size: 18px;
+  line-height: 14px;
+  z-index: 1;
+  transition: 0.5s;
+}
+
+.location{
+  color: #ffffff;
+  margin-top: 10px;
+  margin-left: 5px;
+  font-size: 13px;
   line-height: 14px;
   z-index: 1;
   transition: 0.5s;
@@ -108,13 +137,12 @@
 
 .btn{
   padding-top: 8px;
-  position: absolute;
-  width: 105px;
+  /* position: absolute; */
+  width: 127px;
   height: 38px;
-  background: lightblue;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 25px;
+  border: 1px solid;
+  background: transparent;
+  border-radius: 10px;
   color: #fff;
   cursor: pointer;
   user-select: none;
@@ -123,22 +151,14 @@
   transition: 0.5s;
 }
 
-.btn-text{
-  height: 100%;
-  display:grid;
-  /* 1fr and 1fr seperates the text */
-  grid-template-rows: 1fr 1fr;
-  grid-row-gap: 9px;
-  transition: 0.5s;
-}
 
 .social {
-  padding: 20px;
+  padding: 0 20px;
   position: absolute;
   background-color: transparent;
-  top: -100%;
+  top: 100%;
   left:0;
-  height: 100%;
+  height: 15%;
   width: 100%;
   color: #fff;
   display: flex;
@@ -149,45 +169,24 @@
   transition: 0.5s;
 }
 
-.social p {
-  margin-top: 50px;
-  border: 1px solid #fff;
-  height: fit-content;
-  padding: 0 10px;
-  border-radius: 20px;
-}
-
 .social-links {
-  margin-top: 20px;
+  /* margin-top: 20px; */
+  align-items: center;
+  color: #ffffff;
   width: 100%;
-  padding: 10px 30px;
+  padding: 0px 0px;
   display: flex;
   justify-content: space-between;
 }
 
-.social-links a {
-  transition: 0.2s;
+.profileCard:hover .bottom{
+  transform: translateY(-160px);
+  transition: 0.5s;
 }
 
-a:hover {
-  transform: translateY(-5px)
-}
-
-.social-links img {
-  width: 45px;
-}
-
-.email {
-  width: 100px;
-  height: 40px;
-  text-decoration: none;
-  border: 1px solid #fff;
-  border-radius: 8px;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0.2s;
+.profileCard:hover .social{
+  transform: translateY(-100%);
+  transition: 0.5s;
 }
 
 .profileCard.active .name, .profileCard.active .designation{
