--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -27,7 +27,7 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
   min-height: 70px;
 
-
+  width:600px;
 box-shadow: 0 2px 3px rgba(0, 0, 0, 0.06);
 background-color: #ffffff;
 }
