--- a/frontend/src/components/UserProfiles/UserProfileCard.css
+++ b/frontend/src/components/UserProfiles/UserProfileCard.css
@@ -52,8 +52,8 @@
 
 .profileCard{
   background-color: white;
-  width: 300px;
-  height: 470px;
+  width: 240px;
+  height: 376px;
   border-radius: 25px;
   display: grid;
   /* grid-template-rows: auto 100px; */
@@ -64,7 +64,7 @@
 }
 
 .image-box{
-  width: 300px;
+  width: 100%;
   position: relative;
   text-align: center;
   /* overflow:hidden; */
@@ -103,7 +103,7 @@
 
 .bottom {
   position: absolute;
-  bottom: -20%;
+  bottom: -28%;
   display: grid;
   grid-template-rows: auto 30px;
   justify-content: left;
@@ -138,7 +138,7 @@
 .btn{
   padding-top: 8px;
   /* position: absolute; */
-  width: 127px;
+  width: 97px;
   height: 38px;
   border: 1px solid;
   background: transparent;
