--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -62,15 +62,16 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
   color: #7D8696;
 }
 
-.box-buttons > .box-click {
-  color: #1890ff;
-  font-size: 13px;
-  margin: 0 auto;
-  overflow: hidden;
-  padding: 10px 30px;
-  position: relative;
+.box-buttons > .row > button:focus {
+  background: #F0F2F2;
+  color: #6C7588;
+
+  outline-color: #1890ff;
 }
 
+.redHeart {
+color: red;
+}
 
 .card {
 
