--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -1,5 +1,5 @@
 /* http://jsfiddle.net/zbt5L1wp/4/ */
-
+/* https://bootsnipp.com/snippets/rlxj6 */
 /* temporary for test to see card look */
 
 
@@ -32,7 +32,6 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
 
     position: relative;
-    width: 100%;
 
 
 }
