--- a/frontend/src/containers/Container_CSS/Explore.css
+++ b/frontend/src/containers/Container_CSS/Explore.css
@@ -1,15 +1,54 @@
-.explore-grid{
+.people-grid{
+  /* position: absolute; */
   /* background-color: red; */
   display: grid;
   align-content:center;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   /* grid-column-gap: -10px; */
   /* justify-content: space-around; */
-  width: 1000px;
+  width: 1500px;
   flex-wrap: wrap;
 }
 
-.explore-grid .profileCard{
+.people-grid .profileCard{
   /* flex-grow: 1 */
   margin: 10px;
+}
+
+.tabContainer {
+  width: 100%;
+  height: 50px
+}
+
+.tabContainer .buttonContainer{
+  height: 15%
+}
+
+.tabContainer .buttonContainer button{
+  width: 25%;
+  height: 100%;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 10px;
+  font-family: sans-serif;
+  font-size: 18px;
+  background-color: #eee;
+}
+
+.tabContainer .buttonContainer button:hover {
+  background-color: #d7d4d4;
+}
+
+.tabContainer .tabPanel{
+  height: 85%;
+  background-color: gray;
+  color: white;
+  text-align: center;
+  padding-top: 105px;
+  font-family: sans-serif;
+  font-size: 22px;
+  display: none;
+
 }
