--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -1,5 +1,5 @@
 /* http://jsfiddle.net/zbt5L1wp/4/ */
-/* https://bootsnipp.com/snippets/rlxj6 */
+https://bootsnipp.com/snippets/rlxj6
 /* temporary for test to see card look */
 
 
@@ -16,6 +16,25 @@ body{
 box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 }
 
+
+.box-update > .box-content > .content > .img {
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  position: relative;
+  width: initial;
+}
+ .box-update > .box-content > .content > .img:before {
+  border: 1px solid rgba(0,0,0,.25);
+  bottom: 0;
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+}
 
 .box-buttons > .row {
 
@@ -62,10 +81,10 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 }
 
 .box-buttons > .row > button:focus {
-  background: #F0F2F2;
+  background: #FFF;
   color: #6C7588;
 
-  outline-color: #1890ff;
+  outline-color: #F4F4F4;
 }
 
 .redHeart {
@@ -81,7 +100,7 @@ color: red;
 
   width:650px;
 box-shadow: 0 2px 3px rgba(0, 0, 0, 0.06);
-background-color: #ffffff;
+
 }
 
 
@@ -301,6 +320,7 @@ header {
   font-size: 18px;
 font-style: normal; font-variant: normal; font-weight: 400; line-height: 29px;
   color:black;
+  margin-bottom: 30px;
  }
 
 
