--- a/frontend/src/containers/Container_CSS/Explore.css
+++ b/frontend/src/containers/Container_CSS/Explore.css
@@ -16,35 +16,83 @@
 }
 
 .tabContainer {
-  width: 100%;
-  height: 50px
+  position: relative;
+  left: 40px;
+  bottom: 28px;
+  width: 1760px;
+  height: 1000px;
+  /* background-color: #ffffff; */
 }
 
 .tabContainer .buttonContainer{
-  height: 15%
-}
 
-.tabContainer .buttonContainer button{
-  width: 25%;
+  height: 4%;
+  width: 33.33%;
+  position: relative;
+  left: 33.33%;
+  top: 2%;
+  display: flex;
+  text-align: center;
+  /* margin-top: 10px; */
+
+  }
+
+
+
+.tabContainer .buttonContainer .Tab{
+  width: 33.3333%;
   height: 100%;
-  float: left;
+  position: relative;
+  /* float:none; */
   border: none;
+  /* background: transparent; */
+  /* border-radius: 25px; */
   outline: none;
   cursor: pointer;
-  padding: 10px;
+  /* padding: 10px; */
   font-family: sans-serif;
   font-size: 18px;
-  background-color: #eee;
+  /* background-color: #ffffff; */
+  /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
 }
 
+.description_tab{
+  float: left;
+	width: 33.333%;
+	text-align: center;
+}
+
+.description_tab:first-child.active ~ .slider {
+			left: 0;
+}
+
+.description_tab:nth-child(2).active ~ .slider {
+			left: 33.333%;
+}
+
+.description_tab:nth-child(3).active ~ .slider {
+			left: 66.666%;
+}
+
+
 .tabContainer .buttonContainer button:hover {
-  background-color: #d7d4d4;
+  background-color: #DCDCDC;
+}
+
+.slider {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 33.333%;
+		height: 2px;
+		background-color: #4A66F4;
+		transition: .5s;
 }
 
 .tabContainer .tabPanel{
   height: 85%;
   background-color: gray;
-  color: white;
+  color: #363636;
   text-align: center;
   padding-top: 105px;
   font-family: sans-serif;
