--- a/frontend/src/containers/Container_CSS/Explore.css
+++ b/frontend/src/containers/Container_CSS/Explore.css
@@ -1,12 +1,13 @@
 .people-grid{
-  /* position: absolute; */
+  position: relative;
+  left: 5%;
   /* background-color: red; */
   display: grid;
   align-content:center;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   /* grid-column-gap: -10px; */
   /* justify-content: space-around; */
-  width: 1500px;
+  width: 1600px;
   flex-wrap: wrap;
 }
 
@@ -21,7 +22,7 @@
   bottom: 28px;
   width: 1760px;
   height: 1000px;
-  /* background-color: #ffffff; */
+  background-color: #ffffff;
 }
 
 .tabContainer .buttonContainer{
@@ -44,14 +45,14 @@
   height: 100%;
   position: relative;
   /* float:none; */
-  border: none;
+  border-bottom: 1px grey solid;
   /* background: transparent; */
   /* border-radius: 25px; */
   outline: none;
   cursor: pointer;
   /* padding: 10px; */
   font-family: sans-serif;
-  font-size: 18px;
+  font-size: 15px;
   /* background-color: #ffffff; */
   /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
 }
@@ -85,7 +86,7 @@
 		left: 0;
 		width: 33.333%;
 		height: 2px;
-		background-color: #4A66F4;
+		background-color: grey;
 		transition: .5s;
 }
 
@@ -94,7 +95,9 @@
   background-color: gray;
   color: #363636;
   text-align: center;
-  padding-top: 105px;
+  align-items: center;
+  align-content: center;
+  padding-top: 2%;
   font-family: sans-serif;
   font-size: 22px;
   display: none;
