--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -16,24 +16,27 @@ body{
 box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 }
 
+.card {
 
-.box-update > .box-content > .content > .img {
-  margin: 0;
-  overflow: hidden;
-  padding: 0;
-  position: relative;
-  width: initial;
+
+  background: #FFFFFF;
+
+  min-height: 70px;
+  margin: 0 auto;
+  width:650px;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.06);
+
 }
- .box-update > .box-content > .content > .img:before {
-  border: 1px solid rgba(0,0,0,.25);
-  bottom: 0;
-  content: "";
-  height: 100%;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 100%;
+
+
+
+.row-full{
+      width: 100vw;
+      position: relative;
+      margin-left: -50vw;
+      height: 100px;
+      margin-top: 100px;
+      left: 50%;
 }
 
 .box-buttons > .row {
@@ -47,10 +50,6 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
   position: relative;
 
 
-
-
-
-    position: relative;
 
 
 }
@@ -91,21 +90,11 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 color: red;
 }
 
-.card {
-
-
-  background: #FFFFFF;
-
-  min-height: 70px;
-
-  width:650px;
-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.06);
-
-}
 
 
 .ellipse {
   position: absolute;
+
   bottom: 0;
   left: 0;
   margin-top: 50;
