--- a/frontend/src/containers/Container_CSS/Explore.css
+++ b/frontend/src/containers/Container_CSS/Explore.css
@@ -21,13 +21,13 @@
   left: 40px;
   bottom: 28px;
   width: 1760px;
-  height: 1000px;
+  height: 100%;
   background-color: #ffffff;
 }
 
 .tabContainer .buttonContainer{
 
-  height: 4%;
+  height: 60px;
   width: 33.33%;
   position: relative;
   left: 33.33%;
@@ -35,7 +35,10 @@
   display: flex;
   text-align: center;
   /* margin-top: 10px; */
-
+  /* background-color: red; */
+  padding-top: 30px;
+  margin-bottom: 10px;
+  /* padding-bottom: 5px; */
   }
 
 
@@ -101,5 +104,6 @@
   font-family: sans-serif;
   font-size: 22px;
   display: none;
-
+  overflow: auto;
+  height: 850px;
 }
